Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132101

Extra semicolon warnings in qdirlisting.h, qaccessible.h and qkeysequence.h

    XMLWordPrintable

Details

    • 6b951f6c0 (dev), 8472fc257 (6.9), 6a9343fa1 (6.8), 997abb052 (dev), 3bb4c4949 (dev), 01edc916d (6.9), 5171b7f48 (6.9), 5fc8ca9cd (6.8), 547e27caa (6.8)

    Description

      The following headers are generating "extra ';' after member function definition [-Wextra-semi]" warnings:

      • qdirlisting.h:123:42
      • qaccessible.h:633:102
      • qkeysequence.h:139:26

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ahmad.samir Ahmad Samir
            lysandra.sola Lysandra Sola
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: