src/corelib/io/qstorageinfo_p.h
@@ -45,7 +45,7 @@ public:
 #else
         return QStorageInfo(QStringLiteral("/"));
 #endif
-    };
+    }
 
 protected:
 #if defined(Q_OS_WIN)
